fix: fix typo url in employee bank controller docs
